Improve AGENTS.md: better single-test commands, resource limits, corrected code style